--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.github.axet</groupId>
   <artifactId>kaptcha</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.8</version>
+  <version>0.0.8-SNAPSHOT</version>
   <name>kaptcha</name>
   <description>A web kaptcha generation engine</description>
   <url>https://github.com/axet/kaptcha</url>
