--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.10</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.jhlabs</groupId>
